<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/red"
        android:fontFamily="@font/tmontium"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/topline"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/red"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:srcCompat="@drawable/back"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/scdream6"
        android:text="가게이름"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/gright"
        app:layout_constraintStart_toStartOf="@+id/gleft"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/what_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/what_score"
        android:textSize="18sp"
        android:fontFamily="@font/scdream4"
        app:layout_constraintStart_toStartOf="@+id/gleft"
        app:layout_constraintEnd_toEndOf="@+id/gright"
        app:layout_constraintTop_toBottomOf="@+id/store_name" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="88"
        android:textSize="25sp"
        android:fontFamily="@font/scdream6"
        app:layout_constraintStart_toStartOf="@+id/gleft"
        app:layout_constraintEnd_toEndOf="@+id/gright"
        app:layout_constraintTop_toBottomOf="@+id/what_score" />

    <TextView
        android:id="@+id/pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/scdream4"
        android:text="@string/pos"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gright"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/gleft"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <TextView
        android:id="@+id/pos_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/scdream6"
        android:text="85"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gright"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@+id/gleft"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <TextView
        android:id="@+id/neg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/scdream4"
        android:text="@string/neg"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gright"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/gleft"
        app:layout_constraintTop_toBottomOf="@+id/pos" />

    <TextView
        android:id="@+id/neg_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/scdream6"
        android:text="15"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gright"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@+id/gleft"
        app:layout_constraintTop_toBottomOf="@+id/pos_score" />

    <TextView
        android:id="@+id/what_keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/what_keyword"
        android:textSize="18sp"
        android:fontFamily="@font/scdream4"
        app:layout_constraintStart_toStartOf="@+id/gleft"
        app:layout_constraintEnd_toEndOf="@+id/gright"
        app:layout_constraintTop_toBottomOf="@+id/middleline" />

    <TextView
        android:id="@+id/keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="그냥 키워드를 여기에 주저리 주저리 쓰는건 어떨까 달콤해요 맛있어요 배달이 빨라요 등등"
        android:textSize="18sp"
        android:fontFamily="@font/scdream6"
        app:layout_constraintStart_toStartOf="@+id/gleft"
        app:layout_constraintEnd_toEndOf="@+id/gright"
        app:layout_constraintTop_toBottomOf="@+id/what_keyword" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>